# Graphxx

./: .gitignore  .php-cs-fixer.cache  CMakeLists.txt  CMakeUserPresets.json  build.py  vcpkg.json
Grapher/: Graphing.cpp  Graphing.hpp
functionParser/: FunctionParser.hpp  Logger.hpp  Tokenizer.cpp  Tokenizer.hpp  Types.hpp
src/: main.cc
